# law-rag

./: .gitignore  Luật CK - qwen 3.0 - Nghĩa vụ tuân thủ.csv  README.md  knowledge_graph.html  pyproject.toml  requirements.txt
data/bm25/: clauses.pkl
data/json/: 06_2023_TT-NHNN.json  10_2023_TT-NHNN.json  11_2022_TT-NHNN.json  12_2024_TT-NHNN.json  14_2017_TT-NHNN.json  21_2017_TT-NHNN.json  22_2019_TT-NHNN.json  29_2023_QH15_m_530116.json  32_2024_QH15_m_577203.json  39_2016_TT-NHNN.json  54_2026_ND-CP.json  61_2024_TT-NHNN.json  86_2024_ND-CP.json  94_2024_ND-CP.json
eval/: gold.csv
scripts/: chat.py  classify.py  cluster.py  eval_retrieval.py  eval_self_retrieval.py  eval_sibling.py  ingest.py  knowledge_graph.py  label.py  resume_insert.py  watch.py
src/law_rag/: config.py  embed.py  extract_llm.py  llm.py  parse_doc.py  pipeline.py  retriever.py  rules.py  schema.py  segment.py  store.py
